--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
         <!-- <meta HTTP-EQUIV="pragma" CONTENT="no-cache"> 
         <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
         <meta HTTP-EQUIV="expires" CONTENT="0"> -->
-        <link rel="shortcut icon" href="favicon.ico"  type="image/x-icon"> 
-        <title>小爱Admin</title>
+        <!-- <link rel="shortcut icon" href="favicon.ico"  type="image/x-icon">  -->
+        <title>力邦仓库管理系统</title>
           <!-- 使用CDN加速的CSS文件，配置在vue.config.js下 -->
         <% for (var i in
         htmlWebpackPlugin.options.cdn &&  htmlWebpackPlugin.options.cdn.css) { %>
